toolbar evaluate mode fix, languages fix, styling adjustments, put languages behind a flag

--- a/app/components/Toolbar/Toolbar.scss
+++ b/app/components/Toolbar/Toolbar.scss
@@ -1,3 +1,7 @@
+.root {
+  display: flex;
+}
+
 .radioButton {
   padding-left: 10px;
   padding-right: 10px;
@@ -6,12 +10,12 @@
 
 .common {
   display: flex;
-  flex-direction: row;
   width: 100%;
-  align-items: center;
+  flex-direction: column;
+  flex: 1;
 }
 
-.label{
+.label {
   width: 100px;
   padding-right: 0;
 }
@@ -20,7 +24,7 @@
   composes: common;
 }
 
-.langs{
+.langs {
   composes: common;
 }
 
